--- a/MPfm/MPfm.WPF/Classes/App.xaml
+++ b/MPfm/MPfm.WPF/Classes/App.xaml
@@ -370,22 +370,21 @@
             <Setter Property="VerticalContentAlignment" Value="Center" />
             <Setter Property="HorizontalAlignment" Value="Left" />
             <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-            <!--<Setter Property="Height" Value="20" />-->
+            <Setter Property="Height" Value="24" />
             <Setter Property="BorderThickness" Value="0" />
             <Setter Property="Margin" Value="0" />
             <Setter Property="Padding" Value="0" />
             <Setter Property="Width" Value="Auto" />
             <Setter Property="FontFamily" Value="Roboto" />
-            <Setter Property="Template">
+            <!--<Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ListViewItem}">
                         <StackPanel Background="Goldenrod">
                             <GridViewRowPresenter Content="{TemplateBinding Content}" Columns="{TemplateBinding GridView.ColumnCollection}" />
-                            <!--<TextBlock Text="{Binding Path=Row[2]}"></TextBlock>-->
                         </StackPanel>
                     </ControlTemplate>
                 </Setter.Value>
-            </Setter>
+            </Setter>-->
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
                     <Setter Property="Background" Value="White"/>
