--- a/MPfm/MPfm.Mac/Windows/XIB/MainWindow.xib
+++ b/MPfm/MPfm.Mac/Windows/XIB/MainWindow.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4510" systemVersion="12E55" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4510" systemVersion="13A603" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1080" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4510"/>
@@ -26,6 +26,7 @@
                 <outlet property="btnTabTimeShifting" destination="865" id="875"/>
                 <outlet property="btnUseTempo" destination="763" id="ydJ-DC-lOd"/>
                 <outlet property="cboSoundFormat" destination="48" id="168"/>
+                <outlet property="faderVolume" destination="IE1-VU-bW9" id="oVd-F0-y3x"/>
                 <outlet property="imageAlbumCover" destination="112" id="174"/>
                 <outlet property="lblAlbumTitle" destination="61" id="67"/>
                 <outlet property="lblArtistName" destination="54" id="58"/>
@@ -63,6 +64,7 @@
                 <outlet property="lblVolume" destination="118" id="279"/>
                 <outlet property="lblYear" destination="wlo-uZ-RIW" id="env-yq-7A8"/>
                 <outlet property="outlineLibraryBrowser" destination="20" id="498"/>
+                <outlet property="outputMeter" destination="rKj-Mz-2e5" id="GaD-8L-pNS"/>
                 <outlet property="scrollViewAlbumCovers" destination="583" id="592"/>
                 <outlet property="scrollViewLibraryBrowser" destination="19" id="578"/>
                 <outlet property="scrollViewSongBrowser" destination="132" id="579"/>
@@ -733,7 +735,7 @@
                                                                 </textFieldCell>
                                                             </textField>
                                                             <searchField verticalHuggingPriority="750" id="189">
-                                                                <rect key="frame" x="402" y="3" width="376" height="22"/>
+                                                                <rect key="frame" x="402.00000002092509" y="3" width="376" height="22"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMinY="YES"/>
                                                                 <searchFieldCell key="cell" selectable="YES" editable="YES" borderStyle="bezel" drawsBackground="YES" usesSingleLineMode="YES" id="190">
                                                                     <font key="font" metaFont="smallSystem"/>
@@ -1269,10 +1271,14 @@
                                                             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                         </textFieldCell>
                                                     </textField>
-                                                    <slider horizontalHuggingPriority="750" id="85">
-                                                        <rect key="frame" x="21" y="28" width="25" height="115"/>
+                                                    <customView id="IE1-VU-bW9" customClass="MPfmFaderView">
+                                                        <rect key="frame" x="2" y="37" width="40" height="121"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                        <sliderCell key="cell" continuous="YES" alignment="left" maxValue="100" doubleValue="100" tickMarkPosition="left" numberOfTickMarks="10" sliderType="linear" id="86"/>
+                                                    </customView>
+                                                    <slider horizontalHuggingPriority="750" id="85">
+                                                        <rect key="frame" x="9" y="28" width="25" height="54"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                        <sliderCell key="cell" continuous="YES" alignment="left" maxValue="100" doubleValue="100" tickMarkPosition="right" numberOfTickMarks="10" sliderType="linear" id="86"/>
                                                         <connections>
                                                             <action selector="actionChangeVolume:" target="-2" id="282"/>
                                                         </connections>
@@ -1286,6 +1292,10 @@
                                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                         </textFieldCell>
                                                     </textField>
+                                                    <customView id="rKj-Mz-2e5" customClass="MPfmOutputMeterView">
+                                                        <rect key="frame" x="29" y="31" width="40" height="121"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                    </customView>
                                                 </subviews>
                                             </customView>
                                             <customView id="520" customClass="MPfmView">
@@ -1743,7 +1753,7 @@
         </menu>
     </objects>
     <resources>
-        <image name="NSActionTemplate" width="15" height="15"/>
+        <image name="NSActionTemplate" width="14" height="14"/>
         <image name="NSApplicationIcon" width="128" height="128"/>
     </resources>
 </document>
