--- a/MPfm/MPfm.Mac/Windows/XIB/MainMenu.xib
+++ b/MPfm/MPfm.Mac/Windows/XIB/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4510" systemVersion="12E55" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4510" systemVersion="13A603" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1080" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4510"/>
@@ -14,10 +14,10 @@
         <customObject id="-3" userLabel="Application"/>
         <menu title="AMainMenu" systemMenu="main" id="29">
             <items>
-                <menuItem title="MPfm.Mac" id="56">
-                    <menu key="submenu" title="MacCocoaApp" systemMenu="apple" id="57">
+                <menuItem title="Sessions" id="56">
+                    <menu key="submenu" title="Sessions" systemMenu="apple" id="57">
                         <items>
-                            <menuItem title="About MPfm" id="58">
+                            <menuItem title="About Sessions" id="58">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="orderFrontStandardAboutPanel:" target="-2" id="142"/>
